--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.3'
     id 'io.spring.dependency-management' version '1.1.7'
+    // Azure Functions 플러그인 제거
 }
 
 group = 'org.inhahackers'
@@ -9,13 +10,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -23,34 +18,38 @@ repositories {
     mavenCentral()
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.4"
-    }
-}
-
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-starter-function-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
+    // MongoDB + WebFlux 의존성 유지
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // JWT - optional, only if you're issuing your own tokens
+    // 나머지 의존성은 유지
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
 
-    // (Optional) WebClient instead of RestTemplate
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+// 실행 가능 JAR 설정
+bootJar {
+    archiveFileName = "optimo-user-be.jar"
+    launchScript() // 실행 스크립트 포함
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+task buildDockerImage(type: Exec) {
+    dependsOn bootJar
+    commandLine 'docker', 'build', '-t', 'optimo-user-be:latest', '.'
+}
+
+bootRun {
+    systemProperty 'spring.profiles.active', 'prod'
 }
