--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   application:
     name: Optimo_Chatting_BE
+
+  config:
+    import: optional:file:.env[.properties]
+
   data:
     mongodb:
-      url: mongodb+srv://optimo:qwer1234!!@optimongo.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000/chat_db
+      uri: ${MONGODB_URI}
       auto-index-creation: true
 
 jwt:
